// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PasswordRequirement stories snapshot > Default story renders and matches snapshot 1`] = `
<div>
  <div
    class="space-y-4 w-96"
  >
    <div>
      <label
        class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50"
        data-slot="label"
        for="password"
      >
        Password
      </label>
      <input
        class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input h-9 w-full min-w-0 rounded-md border bg-transparent px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive"
        data-slot="input"
        id="password"
        placeholder="Enter password"
        type="password"
        value=""
      />
    </div>
    <div
      class="space-y-2"
    >
      <p
        aria-level="4"
        class="text-sm font-medium text-foreground"
        role="heading"
      >
        Password Requirements
      </p>
      <div
        class="space-y-1.5"
      >
        <div
          class="flex items-center gap-2 text-sm transition-colors text-muted-foreground"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-x h-4 w-4 text-muted-foreground"
            data-testid="x-icon"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18 6 6 18"
            />
            <path
              d="m6 6 12 12"
            />
          </svg>
          <span>
            At least 8 characters
          </span>
        </div>
        <div
          class="flex items-center gap-2 text-sm transition-colors text-muted-foreground"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-x h-4 w-4 text-muted-foreground"
            data-testid="x-icon"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18 6 6 18"
            />
            <path
              d="m6 6 12 12"
            />
          </svg>
          <span>
            At least one uppercase letter
          </span>
        </div>
        <div
          class="flex items-center gap-2 text-sm transition-colors text-muted-foreground"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-x h-4 w-4 text-muted-foreground"
            data-testid="x-icon"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18 6 6 18"
            />
            <path
              d="m6 6 12 12"
            />
          </svg>
          <span>
            At least one lowercase letter
          </span>
        </div>
        <div
          class="flex items-center gap-2 text-sm transition-colors text-muted-foreground"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-x h-4 w-4 text-muted-foreground"
            data-testid="x-icon"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18 6 6 18"
            />
            <path
              d="m6 6 12 12"
            />
          </svg>
          <span>
            At least one number
          </span>
        </div>
        <div
          class="flex items-center gap-2 text-sm transition-colors text-muted-foreground"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-x h-4 w-4 text-muted-foreground"
            data-testid="x-icon"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18 6 6 18"
            />
            <path
              d="m6 6 12 12"
            />
          </svg>
          <span>
            At least one special character
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PasswordRequirement stories snapshot > PartialPassword story renders and matches snapshot 1`] = `
<div>
  <div
    class="space-y-4 w-96"
  >
    <div>
      <label
        class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50"
        data-slot="label"
        for="password"
      >
        Password
      </label>
      <input
        class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input h-9 w-full min-w-0 rounded-md border bg-transparent px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive"
        data-slot="input"
        id="password"
        placeholder="Enter password"
        type="password"
        value="Pass123"
      />
    </div>
    <div
      class="space-y-2"
    >
      <p
        aria-level="4"
        class="text-sm font-medium text-foreground"
        role="heading"
      >
        Password Requirements
      </p>
      <div
        class="space-y-1.5"
      >
        <div
          class="flex items-center gap-2 text-sm transition-colors text-muted-foreground"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-x h-4 w-4 text-muted-foreground"
            data-testid="x-icon"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18 6 6 18"
            />
            <path
              d="m6 6 12 12"
            />
          </svg>
          <span>
            At least 8 characters
          </span>
        </div>
        <div
          class="flex items-center gap-2 text-sm transition-colors text-primary"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-check h-4 w-4 text-primary"
            data-testid="check-icon"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 6 9 17l-5-5"
            />
          </svg>
          <span>
            At least one uppercase letter
          </span>
        </div>
        <div
          class="flex items-center gap-2 text-sm transition-colors text-primary"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-check h-4 w-4 text-primary"
            data-testid="check-icon"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 6 9 17l-5-5"
            />
          </svg>
          <span>
            At least one lowercase letter
          </span>
        </div>
        <div
          class="flex items-center gap-2 text-sm transition-colors text-primary"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-check h-4 w-4 text-primary"
            data-testid="check-icon"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 6 9 17l-5-5"
            />
          </svg>
          <span>
            At least one number
          </span>
        </div>
        <div
          class="flex items-center gap-2 text-sm transition-colors text-muted-foreground"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-x h-4 w-4 text-muted-foreground"
            data-testid="x-icon"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18 6 6 18"
            />
            <path
              d="m6 6 12 12"
            />
          </svg>
          <span>
            At least one special character
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PasswordRequirement stories snapshot > ValidPassword story renders and matches snapshot 1`] = `
<div>
  <div
    class="space-y-4 w-96"
  >
    <div>
      <label
        class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50"
        data-slot="label"
        for="password"
      >
        Password
      </label>
      <input
        class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input h-9 w-full min-w-0 rounded-md border bg-transparent px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive"
        data-slot="input"
        id="password"
        placeholder="Enter password"
        type="password"
        value="SecurePass123!"
      />
    </div>
    <div
      class="space-y-2"
    >
      <p
        aria-level="4"
        class="text-sm font-medium text-foreground"
        role="heading"
      >
        Password Requirements
      </p>
      <div
        class="space-y-1.5"
      >
        <div
          class="flex items-center gap-2 text-sm transition-colors text-primary"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-check h-4 w-4 text-primary"
            data-testid="check-icon"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 6 9 17l-5-5"
            />
          </svg>
          <span>
            At least 8 characters
          </span>
        </div>
        <div
          class="flex items-center gap-2 text-sm transition-colors text-primary"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-check h-4 w-4 text-primary"
            data-testid="check-icon"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 6 9 17l-5-5"
            />
          </svg>
          <span>
            At least one uppercase letter
          </span>
        </div>
        <div
          class="flex items-center gap-2 text-sm transition-colors text-primary"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-check h-4 w-4 text-primary"
            data-testid="check-icon"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 6 9 17l-5-5"
            />
          </svg>
          <span>
            At least one lowercase letter
          </span>
        </div>
        <div
          class="flex items-center gap-2 text-sm transition-colors text-primary"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-check h-4 w-4 text-primary"
            data-testid="check-icon"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 6 9 17l-5-5"
            />
          </svg>
          <span>
            At least one number
          </span>
        </div>
        <div
          class="flex items-center gap-2 text-sm transition-colors text-primary"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-check h-4 w-4 text-primary"
            data-testid="check-icon"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 6 9 17l-5-5"
            />
          </svg>
          <span>
            At least one special character
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
